Refactor out Embolize class

--- a/src/ipnb/Nanite_Graph.ipynb
+++ b/src/ipnb/Nanite_Graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -10,10 +10,10 @@
      "output_type": "stream",
      "text": [
       "Running simulation... \n",
-      "The average wait time is 0 minutes and 21 seconds. \n",
-      "The count of embolizing nanites is 1749 over 4002 total,  43.70 efficient. \n",
-      "The count of embolized vazes is 123 against exisiting 125  embolized. \n",
-      "The process efficacy is  98.40 and over_embolization  14.22 average.\n"
+      "The average wait time is 0 minutes and 4 seconds. \n",
+      "The count of embolizing nanites is 6558 over 16003 total,  40.98 efficient. \n",
+      "The count of embolized vazes is 113 against exisiting 277  mav nodes. \n",
+      "The process efficacy is  40.79 and over_embolization  58.04 average.\n"
      ]
     }
    ],
@@ -24,7 +24,7 @@
     "import networkx as nx  # importing networkx package\n",
     "import matplotlib.pyplot as plt  # importing matplotlib package and pyplot is for displaying the graph on canvas\n",
     "\n",
-    "NODE_TRAVERSE = 0.05\n",
+    "NODE_TRAVERSE = 0.01\n",
     "MAV_THRESHOLD = 5\n",
     "NODEINFO = \"node_info\"\n",
     "DEST = \"destinations\"\n",
@@ -37,7 +37,7 @@
     "    VASE_LEVEL = {}\n",
     "    \"\"\"Dicionário contendo todos os vasos ordenados pela distãncia do entroncamento\"\"\"\n",
     "    VASE_EVENTS = []\n",
-    "    def __init__(self, env, entry=8, mav_depth=6, graph_depth=7):\n",
+    "    def __init__(self, entry=8, mav_depth=6, graph_depth=7):\n",
     "        \"\"\" Gráfico MAV simulando a estrutura de vasos sanguíneos no cérebro.\n",
     "\n",
     "        :param env: Ambiente de simulação\n",
@@ -45,8 +45,6 @@
     "        :param mav_depth: profundidade na rede onde se inicia uma malformção.\n",
     "        :param graph_depth: profundidade da rede de vasos sanguíneos.\n",
     "        \"\"\"\n",
-    "        self.swarm = []\n",
-    "        \"\"\"Armazena todos os nanites injetados no sangue\"\"\"\n",
     "        self.env = None #env\n",
     "        super().__init__()\n",
     "        self.node_name = 1\n",
@@ -59,10 +57,6 @@
     "        \"\"\"Nível de concentração dos marcadores de MAV.\"\"\"\n",
     "        self.entry_node = None\n",
     "        \"\"\"Vaso onde os nanites foram injetados\"\"\"\n",
-    "        self.entry_point = 8 # simpy.Resource(env, entry)\n",
-    "        \"\"\"capacidade de vazão da agulha injetora\"\"\"\n",
-    "        self.wait_times = []\n",
-    "        \"\"\"tempos de percurso dos nanites\"\"\"\n",
     "\n",
     "    def do_edge(self, node, depth, mav=0):\n",
     "        \"\"\" Criação de uma aresta representado um vaso sanguíneo\n",
@@ -84,6 +78,15 @@
     "        elif mav and (depth < mav_depth):\n",
     "            mav += 1\n",
     "        [self.do_edge(name, depth, mav=mav) for _ in range(0, random.randint(2, 3)) if depth]\n",
+    "\n",
+    "    def embolized(self, threshold=1):\n",
+    "        \"\"\" Lista de nós embolizados.\n",
+    "        \n",
+    "        :return: Lista de nós embolizados\n",
+    "        \"\"\"\n",
+    "        return [self.nodes[nd][NODEINFO].embolized\n",
+    "                                      for nd in self.nodes if self.nodes[nd][NODEINFO].embolized >= threshold]\n",
+    "\n",
     "\n",
     "    def redo_edge(self):\n",
     "        \"\"\" Criação de um objeto Node para cada aresta representado um vaso sanguíneo com nó de processamento\n",
@@ -172,16 +175,14 @@
     "\n",
     "        # self.nodes[ori][\"node\"].add_edge(self.nodes[dest][\"node\"])\n",
     "\n",
-    "    def build(self, filename=\"artery_only.gml\"):\n",
+    "    def build(self, filename=VASE_FILE):\n",
     "        \"\"\"Constrói o grafo de maneira aleatória\n",
     "\n",
     "        :return: None\n",
     "        \"\"\"\n",
     "        self.do_edge(self.node_name, self.graph_depth)\n",
     "        self.nodes[1]['color'] = \"blue\"\n",
-    "        #self.entry_node = self.nodes[1]['node']\n",
-    "        #nx.write_gml(self, filename)\n",
-    "        nx.write_gpickle(self, VASE_FILE)\n",
+    "        nx.write_gpickle(self, filename)\n",
     "\n",
     "\n",
     "    def load(self, env):\n",
@@ -191,9 +192,7 @@
     "        \"\"\"\n",
     "        self.env = env\n",
     "        self.redo_edge()\n",
-    "        self.entry_point = simpy.Resource(env, self.entry_point)\n",
     "        self.entry_node = self.nodes[1][NODEINFO]\n",
-    "        \"\"\"capacidade de vazão da agulha injetora\"\"\"\n",
     "\n",
     "    def plot(self):\n",
     "        values = [self.nodes[node][\"color\"] for node in self.nodes()]\n",
@@ -201,6 +200,87 @@
     "        nx.draw(self, with_labels=True, node_color=values)\n",
     "        #  #draws the networkx graph containing nodes which are declared till before\n",
     "        plt.show()  # displays the networkx graph on matplotlib canvas\n",
+    "\n",
+    "        \n",
+    "class Nanite:\n",
+    "    def __init__(self, name, env, depth):\n",
+    "        \"\"\" O nanochip de embolização. Atualmente tem uma programação aleatória\n",
+    "\n",
+    "        :param name: Identificador do chip.\n",
+    "        :param env: Ambiente de simulaçao.\n",
+    "        :param depth: Profundidade programada de embolização.\n",
+    "        \"\"\"\n",
+    "        self.name, self.depth, self.env = name, depth, env\n",
+    "        self.mav, self.trs = 0, -1\n",
+    "        \"\"\"Concentração de marcadores onde embolizou, nível de profundidade quando embolizou\"\"\"\n",
+    "\n",
+    "    def cross_node(self, flow, current_node, destinations, mav, depth):\n",
+    "        \"\"\"Atravessa um entrocamento de vasos, decidindo a ação a tomar.\n",
+    "\n",
+    "        :param flow: capacidade de fluxo onde o nanite se encontra.\n",
+    "        :param current_node: Nó que está atravessando no momento.\n",
+    "        :param destinations: Listra dos possíveis destinos neste entroncamento.\n",
+    "        :param mav: Determina o nível de marcadores de mav neste nó.\n",
+    "        :param depth: Profundidade do nó que está atravessando no momento.\n",
+    "        :return:\n",
+    "        \"\"\"\n",
+    "        with flow.request() as request:\n",
+    "            yield request\n",
+    "            self.trs = depth\n",
+    "            if (depth <= self.depth) and mav:\n",
+    "                \"\"\"estando na MAV e profundidade programada, para e emboliza\"\"\"\n",
+    "                self.mav = mav\n",
+    "                current_node.embolize()\n",
+    "            elif destinations:\n",
+    "                destination = random.choice(destinations)\n",
+    "                yield self.env.process(destination.cross_node(self))\n",
+    "\n",
+    "\n",
+    "class Embolization:\n",
+    "    def __init__(self, env, entry=8):\n",
+    "        \"\"\" Gráfico MAV simulando a estrutura de vasos sanguíneos no cérebro.\n",
+    "\n",
+    "        :param env: Ambiente de simulação\n",
+    "        :param entry: capacidade de vazão do injetor de nanites.\n",
+    "        \"\"\"\n",
+    "        self.env = env\n",
+    "        \"\"\"Ambiente de simulação\"\"\"\n",
+    "        self.swarm = []\n",
+    "        \"\"\"Armazena todos os nanites injetados no sangue\"\"\"\n",
+    "        self.entry_point = simpy.Resource(env, entry)\n",
+    "        \"\"\"capacidade de vazão da agulha injetora\"\"\"\n",
+    "        self.wait_times = []\n",
+    "        \"\"\"tempos de percurso dos nanites\"\"\"\n",
+    "\n",
+    "\n",
+    "    def main(self, simulation_time=200, build_mav=False):\n",
+    "        env = self.env\n",
+    "        mav = Mav(entry=self.entry_point)\n",
+    "        # random.seed(43)\n",
+    "        mav.build() if build_mav else None\n",
+    "        self.mav = mav = nx.read_gpickle(VASE_FILE)\n",
+    "        mav.load(env=env)\n",
+    "        # mav.plot() #descomente esta linha para plotar o grafo\n",
+    "        # [print(level, node.nome) for level, level_list in Mav.VASE_LEVEL.items() for node in level_list]\n",
+    "        # [print(level, [adj.nome for adj in node.dest]) for level, level_list in Mav.VASE_LEVEL.items() for node in level_list]\n",
+    "        # print (mav.adj)\n",
+    "        #return\n",
+    "\n",
+    "        # Run the simulation\n",
+    "        env.process(self.run_embolization())\n",
+    "        env.run(until=simulation_time)\n",
+    "\n",
+    "        # View the results\n",
+    "        mins, secs = self.get_average_wait_time()\n",
+    "        success, total, embolized = self.count_embolizations()\n",
+    "        mav_nodes, avg_embol = self.count_mav_rates()\n",
+    "        print(\n",
+    "          \"Running simulation...\",\n",
+    "          f\"\\nThe average wait time is {mins} minutes and {secs} seconds.\",\n",
+    "          f\"\\nThe count of embolizing nanites is {success} over {total} total, {100*success/total: .2f} efficient.\",\n",
+    "          f\"\\nThe count of embolized vazes is {embolized} against exisiting {mav_nodes}  mav nodes.\",\n",
+    "          f\"\\nThe process efficacy is {100*embolized/mav_nodes: .2f} and over_embolization {avg_embol: .2f} average.\",\n",
+    "        )\n",
     "\n",
     "    def go_to_mav(self, nanite):\n",
     "        \"\"\"Inicia a travessia de um nanite por dentro da corrente sanguínea.\n",
@@ -212,7 +292,7 @@
     "            # nanite_chip = Nanite(nanite, self.env, self.mav_depth)\n",
     "            nanite_chip = Nanite(nanite, self.env, MAV_THRESHOLD - random.randint(0, 5))\n",
     "            self.swarm.append(nanite_chip)\n",
-    "            yield self.env.process(self.entry_node.cross_node(nanite_chip))\n",
+    "            yield self.env.process(self.mav.entry_node.cross_node(nanite_chip))\n",
     "\n",
     "        # Moviegoer heads into the theater\n",
     "        self.wait_times.append(self.env.now - arrival_time)\n",
@@ -248,7 +328,7 @@
     "        # print(self.entry_node.cross, [[k.ori for k in self.nodes[j][\"node\"].dest] for j in range(2, 6)])\n",
     "        # print(self.entry_node.dest)\n",
     "        return sum(1 for nano in self.swarm if nano.mav), len(self.swarm), sum(\n",
-    "            1 for nd in self.nodes if self.nodes[nd][NODEINFO].embolized > 0\n",
+    "            1 for nd in self.mav.embolized()\n",
     "                   )\n",
     "\n",
     "    def count_mav_rates(self):\n",
@@ -256,73 +336,13 @@
     "\n",
     "        :return: Nós embolizados, média de nanites embolizando o mesmo nó.\n",
     "        \"\"\"\n",
-    "        return sum(1 for nd in self.nodes if self.nodes[nd][NODEINFO].mav > 0\n",
-    "                   ), statistics.mean(self.nodes[nd][NODEINFO].embolized\n",
-    "                                      for nd in self.nodes if self.nodes[nd][NODEINFO].embolized > 0)\n",
-    "\n",
-    "\n",
-    "class Nanite:\n",
-    "    def __init__(self, name, env, depth):\n",
-    "        \"\"\" O nanochip de embolização. Atualmente tem uma programação aleatória\n",
-    "\n",
-    "        :param name: Identificador do chip.\n",
-    "        :param env: Ambiente de simulaçao.\n",
-    "        :param depth: Profundidade programada de embolização.\n",
-    "        \"\"\"\n",
-    "        self.name, self.depth, self.env = name, depth, env\n",
-    "        self.mav, self.trs = 0, -1\n",
-    "        \"\"\"Concentração de marcadores onde embolizou, nível de profundidade quando embolizou\"\"\"\n",
-    "\n",
-    "    def cross_node(self, flow, current_node, destinations, mav, depth):\n",
-    "        \"\"\"Atravessa um entrocamento de vasos, decidindo a ação a tomar.\n",
-    "\n",
-    "        :param flow: capacidade de fluxo onde o nanite se encontra.\n",
-    "        :param current_node: Nó que está atravessando no momento.\n",
-    "        :param destinations: Listra dos possíveis destinos neste entroncamento.\n",
-    "        :param mav: Determina o nível de marcadores de mav neste nó.\n",
-    "        :param depth: Profundidade do nó que está atravessando no momento.\n",
-    "        :return:\n",
-    "        \"\"\"\n",
-    "        with flow.request() as request:\n",
-    "            yield request\n",
-    "            self.trs = depth\n",
-    "            if (depth <= self.depth) and mav:\n",
-    "                \"\"\"estando na MAV e profundidade programada, para e emboliza\"\"\"\n",
-    "                self.mav = mav\n",
-    "                current_node.embolize()\n",
-    "            elif destinations:\n",
-    "                destination = random.choice(destinations)\n",
-    "                yield self.env.process(destination.cross_node(self))\n",
-    "\n",
+    "        return sum(1 for nd in self.mav.embolized(0)\n",
+    "                   ), statistics.mean(self.mav.embolized())\n",
     "\n",
     "def main():\n",
     "    env = simpy.Environment()\n",
-    "    mav = Mav(env=env)\n",
-    "    # random.seed(43)\n",
-    "    # mav.build()\n",
-    "    mav = nx.read_gpickle(VASE_FILE)\n",
-    "    mav.load(env=env)\n",
-    "    # mav.plot() #descomente esta linha para plotar o grafo\n",
-    "    # [print(level, node.nome) for level, level_list in Mav.VASE_LEVEL.items() for node in level_list]\n",
-    "    # [print(level, [adj.nome for adj in node.dest]) for level, level_list in Mav.VASE_LEVEL.items() for node in level_list]\n",
-    "    # print (mav.adj)\n",
-    "    #return\n",
-    "\n",
-    "    # Run the simulation\n",
-    "    env.process(mav.run_embolization())\n",
-    "    env.run(until=200)\n",
-    "\n",
-    "    # View the results\n",
-    "    mins, secs = mav.get_average_wait_time()\n",
-    "    success, total, embolized = mav.count_embolizations()\n",
-    "    mav_nodes, avg_embol = mav. count_mav_rates()\n",
-    "    print(\n",
-    "      \"Running simulation...\",\n",
-    "      f\"\\nThe average wait time is {mins} minutes and {secs} seconds.\",\n",
-    "      f\"\\nThe count of embolizing nanites is {success} over {total} total, {100*success/total: .2f} efficient.\",\n",
-    "      f\"\\nThe count of embolized vazes is {embolized} against exisiting {mav_nodes}  embolized.\",\n",
-    "      f\"\\nThe process efficacy is {100*embolized/mav_nodes: .2f} and over_embolization {avg_embol: .2f} average.\",\n",
-    "    )\n",
+    "    embolization = Embolization(env=env)\n",
+    "    embolization.main(800, 0)\n",
     "\n",
     "\n",
     "main()\n"
