--- a/src/ipnb/Nanite_Graph.ipynb
+++ b/src/ipnb/Nanite_Graph.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 21,
    "metadata": {
     "code_folding": [
      439
@@ -176,6 +176,7 @@
     "import statistics\n",
     "import networkx as nx  # importing networkx package\n",
     "import matplotlib.pyplot as plt  # importing matplotlib package and pyplot is for displaying the graph on canvas\n",
+    "import seaborn as sns\n",
     "\n",
     "NODE_TRAVERSE = 0.01\n",
     "MAV_THRESHOLD = 5\n",
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
@@ -335,7 +336,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='5c9e0c62-5a8f-4283-850d-55230a26dd73'></div>"
+      "text/html": "<div id='1451cbd4-432b-4291-9b50-3341ed604e65'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -345,13 +346,15 @@
       "text/plain": "     nome  depth  mav  dest\n0       1      7    0     1\n1       2      7    0     2\n2       3      6    0     2\n3       4      5    1     2\n4       5      4    2     3\n..    ...    ...  ...   ...\n272   273      1    0     0\n273   274      1    0     0\n274   275      2    0     2\n275   276      1    0     0\n276   277      1    0     0\n\n[277 rows x 4 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>nome</th>\n      <th>depth</th>\n      <th>mav</th>\n      <th>dest</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>7</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>7</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>6</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>5</td>\n      <td>1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>4</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>272</th>\n      <td>273</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>273</th>\n      <td>274</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>274</th>\n      <td>275</td>\n      <td>2</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>275</th>\n      <td>276</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>276</th>\n      <td>277</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>277 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 180,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "def show_mav(build_mav=False, env=None, entry=8):\n",
+    "        # import seaborn as sns\n",
     "        entry_point = simpy.Resource(env, entry)\n",
     "        \"\"\"capacidade de vazão da agulha injetora\"\"\"\n",
     "        mav = Mav(entry=entry_point)\n",
@@ -392,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -609,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -622,9 +625,9 @@
      "text": [
       "Running simulation... \n",
       "The average wait time is 0 minutes and 4 seconds. \n",
-      "The count of embolizing nanites is 34 over 83 total,  40.96% efficient. \n",
-      "The count of embolized vazes is 24 against exisiting 277  mav nodes. \n",
-      "The process efficacy is  8.66% and over_embolization  1.42 average.\n"
+      "The count of embolizing nanites is 23 over 83 total,  27.71% efficient. \n",
+      "The count of embolized vazes is 17 against exisiting 277  mav nodes. \n",
+      "The process efficacy is  6.14% and over_embolization  1.35 average.\n"
      ]
     },
     {
@@ -638,7 +641,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='31119e30-b0fa-4f89-a347-34394f34ab6d'></div>"
+      "text/html": "<div id='d2260e23-e3ee-4ac3-a9ff-0306765bcb47'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -654,7 +657,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='c2b65065-c196-45cb-8aa9-7c33467a4abd'></div>"
+      "text/html": "<div id='5f7a48b0-79b0-428b-a5c2-4ece8bd1fb2d'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -670,7 +673,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='db7f9157-3787-4c27-b856-775d0b69e87e'></div>"
+      "text/html": "<div id='5272be1a-f07a-4b62-ab6a-196214dbd345'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -686,23 +689,22 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='1686d514-4356-4b99-8609-0a580f37ab4f'></div>"
+      "text/html": "<div id='e13c7e4b-48b3-481c-ace2-090b78e797e6'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "text/plain": "     nanite  node   time  level  mav emb\n0         0   269   0.00      1    0  no\n1         0   267   0.05      2    0  no\n2         0   260   0.10      3    0  no\n3         0   250   0.15      4    0  no\n4         0   219   0.20      5    0  no\n..      ...   ...    ...    ...  ...  ..\n950      72     1  17.60      7    0  no\n951      75     4  18.20      5    1  lo\n952      75     3  18.25      6    0  no\n953      75     2  18.30      7    0  no\n954      75     1  18.35      7    0  no\n\n[955 rows x 6 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>nanite</th>\n      <th>node</th>\n      <th>time</th>\n      <th>level</th>\n      <th>mav</th>\n      <th>emb</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>269</td>\n      <td>0.00</td>\n      <td>1</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>267</td>\n      <td>0.05</td>\n      <td>2</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>260</td>\n      <td>0.10</td>\n      <td>3</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>250</td>\n      <td>0.15</td>\n      <td>4</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>219</td>\n      <td>0.20</td>\n      <td>5</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>950</th>\n      <td>72</td>\n      <td>1</td>\n      <td>17.60</td>\n      <td>7</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>951</th>\n      <td>75</td>\n      <td>4</td>\n      <td>18.20</td>\n      <td>5</td>\n      <td>1</td>\n      <td>lo</td>\n    </tr>\n    <tr>\n      <th>952</th>\n      <td>75</td>\n      <td>3</td>\n      <td>18.25</td>\n      <td>6</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>953</th>\n      <td>75</td>\n      <td>2</td>\n      <td>18.30</td>\n      <td>7</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>954</th>\n      <td>75</td>\n      <td>1</td>\n      <td>18.35</td>\n      <td>7</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n  </tbody>\n</table>\n<p>955 rows × 6 columns</p>\n</div>"
+      "text/plain": "     nanite  node   time  level  mav emb\n0         0    48   0.00      3    3  hi\n1         0    39   0.05      4    2  lo\n2         0     4   0.10      5    1  lo\n3         0     3   0.15      6    0  no\n4         0     2   0.20      7    0  no\n..      ...   ...    ...    ...  ...  ..\n505      80     4  19.55      5    1  lo\n506      80     3  19.60      6    0  no\n507      80     2  19.65      7    0  no\n508      80     1  19.70      7    0  no\n509      82     7  19.95      2    4  hi\n\n[510 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>nanite</th>\n      <th>node</th>\n      <th>time</th>\n      <th>level</th>\n      <th>mav</th>\n      <th>emb</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>48</td>\n      <td>0.00</td>\n      <td>3</td>\n      <td>3</td>\n      <td>hi</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>39</td>\n      <td>0.05</td>\n      <td>4</td>\n      <td>2</td>\n      <td>lo</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>4</td>\n      <td>0.10</td>\n      <td>5</td>\n      <td>1</td>\n      <td>lo</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>3</td>\n      <td>0.15</td>\n      <td>6</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>2</td>\n      <td>0.20</td>\n      <td>7</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>505</th>\n      <td>80</td>\n      <td>4</td>\n      <td>19.55</td>\n      <td>5</td>\n      <td>1</td>\n      <td>lo</td>\n    </tr>\n    <tr>\n      <th>506</th>\n      <td>80</td>\n      <td>3</td>\n      <td>19.60</td>\n      <td>6</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>507</th>\n      <td>80</td>\n      <td>2</td>\n      <td>19.65</td>\n      <td>7</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>508</th>\n      <td>80</td>\n      <td>1</td>\n      <td>19.70</td>\n      <td>7</td>\n      <td>0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>509</th>\n      <td>82</td>\n      <td>7</td>\n      <td>19.95</td>\n      <td>2</td>\n      <td>4</td>\n      <td>hi</td>\n    </tr>\n  </tbody>\n</table>\n<p>510 rows × 6 columns</p>\n</div>"
      },
-     "execution_count": 184,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import seaborn as sns\n",
     "\n",
     "class ReportResults:\n",
     "    \"\"\" Gera relatórios do processo de embolização.\n",
@@ -910,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
